tests/grammar/types/binary_expr/binary_expr_fail_2/stderr.golden
error[E2G22]: TypeError
 --> ${CWD}/main.k:1:5
  |
1 | a = {} < {}
  |     ^ unsupported operand type(s) for <: '{any:any}' and '{any:any}'
  |